# alfort

./: .deepsource.toml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci-testing.yml  publish.yml
alfort/: __init__.py  app.py  dom.py  sub.py  vdom.py
examples/simple_counter/: main.py  pyproject.toml
stubs/browser/: __init__.pyi  timer.pyi
tests/: test_app.py  test_vdom.py
