[tool.poetry]
name = "alfort"
version = "0.0.0-dev"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
conventional-commit = "^0.4.2"
brython = "^3.10.5"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.13.1"
pyright = "^1.1.238"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
pytest-black = "^0.3.12"
pre-commit = "^2.18.1"
conventional-commit = "^0.4.2"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pyright]
include = ["alfort", "tests"]
stubPath ="stubs"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
addopts = "--strict --durations=0 --color=yes"
testpaths = [
    "tests"
]

[tool.poetry-version-plugin]
source = "git-tag"

[tool.poe.tasks]
test = "pytest"
install-plugins = "poetry plugin add poetry-version-plugin poethepoet[poetry_plugin]"
install-pre-commit = "pre-commit install"
