[tool.poetry]
name = "alfort"
version = "0.0.0"
description = "Elm-like interactive application framework for Python"
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/ar90n/alfort"
readme = "README.md"
keywords = ["declarative-ui", "elm-architecture"]
include = ["alfort/py.typed"]


[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.17.0"
pyright = "^1.1.238"
pytest = "^7.1.1"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.0.0"
pytest-black = "^0.3.12"
pre-commit = "^2.18.1"
isort = "^5.10.1"
flake8 = "^6.0.0"
commitizen = "^2.35.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.isort]
profile = "black"

[tool.pyright]
include = ["alfort", "examples"]
stubPath ="stubs"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.11"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
addopts = "--strict --durations=0 --color=yes"
testpaths = [
    "tests"
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poe.tasks]
test = "pytest"
check = "pre-commit run -a"
install-plugins = "poetry self add poethepoet[poetry_plugin]"
install-pre-commit = "pre-commit install"
